# assimp2h

./: CMakeLists.txt  conanfile.txt
src/: main.cpp  reader.cpp  reader.h  writer.cpp  writer.h
